[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/GladlyAcceptRegular-Wyjov.ttf" type="FontFile" id=1]
[ext_resource path="res://scripts/options.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/The Blob Suite drums fixed.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/SelectSound.mp3" type="AudioStream" id=4]

[sub_resource type="FontFile" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.54902 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontFile" id=5]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 714.0
color = Color( 0.388235, 0.388235, 0.388235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="MarginContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
offset_right = 1280.0
offset_bottom = 710.0

[node name="Label" type="Label" parent="MenuContainer/VBoxContainer"]
offset_right = 1280.0
offset_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer"]
offset_top = 357.0
offset_right = 1280.0
offset_bottom = 710.0
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
offset_right = 1280.0
offset_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 50
theme_override_constants/margin_left = 50

[node name="VolumeSlider" type="HSlider" parent="MenuContainer/VBoxContainer/VBoxContainer/MarginContainer"]
offset_left = 50.0
offset_right = 1230.0
offset_bottom = 16.0
min_value = -40.0
max_value = 0.0

[node name="Label" type="Label" parent="MenuContainer/VBoxContainer/VBoxContainer/MarginContainer/VolumeSlider"]
offset_left = 561.0
offset_top = -23.0
offset_right = 616.0
offset_bottom = 2.0
text = "Volume"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
offset_top = 90.0
offset_right = 1280.0
offset_bottom = 171.0
pivot_offset = Vector2( 28, -139 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 50
theme_override_constants/margin_left = 50

[node name="back" type="Button" parent="MenuContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
offset_left = 50.0
offset_right = 1230.0
offset_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/hover = SubResource( 2 )
theme_override_styles/pressed = SubResource( 3 )
theme_override_styles/normal = SubResource( 4 )
theme_override_fonts/font = SubResource( 5 )
text = "back"

[node name="MarginContainer3" type="MarginContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
offset_top = 181.0
offset_right = 1280.0
offset_bottom = 262.0
pivot_offset = Vector2( 28, -139 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 50
theme_override_constants/margin_left = 50

[node name="MarginContainer4" type="MarginContainer" parent="MenuContainer/VBoxContainer/VBoxContainer"]
offset_top = 272.0
offset_right = 1280.0
offset_bottom = 353.0
pivot_offset = Vector2( 28, -139 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 50
theme_override_constants/margin_left = 50

[node name="Audio" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
autoplay = true

[node name="Select" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )

[connection signal="ready" from="MenuContainer/VBoxContainer/VBoxContainer/MarginContainer/VolumeSlider" to="." method="_on_VolumeSlider_ready"]
[connection signal="value_changed" from="MenuContainer/VBoxContainer/VBoxContainer/MarginContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="button_down" from="MenuContainer/VBoxContainer/VBoxContainer/MarginContainer2/back" to="." method="_on_back_button_down"]
